feat(logsearch): 日志查询功能关键字搜索支持多个字段,字段间 or 逻辑
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>